--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="candle6 overOpen" id="step6"></div>
     </section>
 
-    <section class="container-fluid bg-green hbd color-blue">
+    <section class="container-fluid bg-green hbd color-blue" id="hbd">
         <div class="row justify-content-center pt-5">
             <div class="col-md-8 text-center">
                 <p>
@@ -95,7 +95,7 @@
         </div>
     </section>
 
-    <footer class='container color-blue pt-5 pb-4'>
+    <footer class='container color-blue pt-5 pb-4' id='footer'>
         <div class="row">
             <div class="col-12 justify-content-between d-flex">
                 <p class='color-bluelight'>
