--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
             </div>
             <div class="col-12 justify-content-center pt-5 content-redes">
                 <div class="btns btn-redes d-flex">
-                    <div class="img-redes d-flex col-4 p-0">
-                        <img src="./img/SVG/fb.svg" alt="" class="img-fluid">
-                        <img src="./img/SVG/ig.svg" alt="" class="img-fluid">
-                        <img src="./img/SVG/tw.svg" alt="" class="img-fluid">
+                    <div class="img-redes d-flex col-4 p-0 align-items-center justify-content-center">
+                        <a href=""><img src="./img/SVG/fb.svg" alt="" class="img-fluid"></a>
+                        <a href=""><img src="./img/SVG/ig.svg" alt="" class="img-fluid"></a>
+                        <a href=""><img src="./img/SVG/tw.svg" alt="" class="img-fluid"></a>
                     </div>
                     <p class="col-8">
                         <strong>Comparte tu mensaje como historia en redes sociales </strong>
