--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
         <div class="row justify-content-center text-center">
             <div class="col-12 col-md-8 col-lg-4 bg-green py-4 p-md-4 greeting">
                 <h2>Hola</h2>
-                <p>
+                <p class="d-none d-md-block">
+                    <strong>Pasa el cursor sobre la vela</strong> para que descubras todo lo que en Protección deseamos hoy para ti
+                </p>
+                <p class="d-block d-md-none">
                     <strong>Desliza hacia abajo</strong> para que descubras todo lo que en Protección deseamos hoy para ti
                 </p>
             </div>
@@ -78,7 +81,6 @@
                 <div class="btns btn-redes d-flex">
                     <div class="img-redes d-flex col-4 p-0 align-items-center justify-content-center">
                         <a href=""><img src="./img/SVG/fb.svg" alt="" class="img-fluid"></a>
-                        <a href=""><img src="./img/SVG/ig.svg" alt="" class="img-fluid"></a>
                         <a href=""><img src="./img/SVG/tw.svg" alt="" class="img-fluid"></a>
                     </div>
                     <p class="col-8">
