--- a/index.html
+++ b/index.html
@@ -79,20 +79,20 @@
             </div>
             <div class="col-12 justify-content-center pt-5 content-redes">
                 <div class="btns btn-redes d-flex">
-                    <div class="img-redes d-flex col-3 p-0 align-items-center justify-content-center">
+                    <div class="img-redes d-flex col-2 p-0 align-items-center justify-content-center">
                         <a href="https://www.facebook.com/sharer.php?u=https://raw.githubusercontent.com/adaptable2/happy/master/img/width.jpg" target="_blank"><img src="./img/SVG/fb.svg" alt="" class="img-fluid"></a>
                         <a href="http://twitter.com/share?url=https://raw.githubusercontent.com/adaptable2/happy/master/img/width.jpg" target="_blank"><img src="./img/SVG/tw.svg" alt="" class="img-fluid"></a>
                     </div>
-                    <p class="col-9">
+                    <p class="col-10">
                         <strong>Comparte tu mensaje como historia en redes sociales </strong>
                     </p>
                 </div>
                 <a href="./img/imgDownload.zip" download class="d-flex"> 
-                    <div class="btns btn-download d-flex align-items-center">
-                        <div class="col-3 p-0 d-flex justify-content-center">
+                    <div class="btns btn-download d-flex align-items-center w-100">
+                        <div class="col-2 p-0 d-flex justify-content-center">
                             <img src="./img/SVG/download.svg" alt="" class="">
                         </div>
-                        <p class="col-9"><strong>Descarga tu mensaje</strong></p>
+                        <p class="col-10"><strong>Descarga tu mensaje</strong></p>
                     </div>
                 </a>
             </div>
