--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
             <div class="col-md-8 text-center">
                 <img src="./img/SVG/hbd.svg" alt="" class="img-hbd">
             </div>
-            <div class="col-12 justify-content-center pt-5 content-redes">
+            <div class="col-12 d-flex px-0 justify-content-center pt-5 content-redes">
                 <div class="btns btn-redes d-flex">
-                    <div class="img-redes d-flex col-2 p-0 align-items-center justify-content-center">
+                    <div class="img-redes d-flex col-3 p-0 align-items-center justify-content-center">
                         <a href="https://www.facebook.com/sharer.php?u=https://raw.githubusercontent.com/adaptable2/happy/master/img/width.jpg" target="_blank"><img src="./img/SVG/fb.svg" alt="" class="img-fluid"></a>
                         <a href="http://twitter.com/share?url=https://raw.githubusercontent.com/adaptable2/happy/master/img/width.jpg" target="_blank"><img src="./img/SVG/tw.svg" alt="" class="img-fluid"></a>
                     </div>
-                    <p class="col-10">
+                    <p class="col-9 pr-0">
                         <strong>Comparte tu mensaje como historia en redes sociales </strong>
                     </p>
                 </div>
