estilos grid espacio

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
         </div>
     </header>
-    <section class="container pb-5 color-blue">
+    <section class="container color-blue">
         <div class="row justify-content-center text-center">
             <div class="col-12 col-md-8 col-lg-4 bg-green py-4 p-md-4 greeting">
                 <h2>Hola</h2>
